[package]
name = "docker-repack"
version = "0.2.0"
edition = "2021"
build = "build.rs"
description = "Repack Docker images for faster pull speeds"
license = "MIT"
repository = "https://github.com/orf/docker-repack/"

[dependencies]
tracing = { version = "0.1.40", features = ["release_max_level_debug", "max_level_trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-indicatif = "0.3.6"
memmap2 = "0.9.4"
strum = { version = "0.26.3", features = ["derive"] }
memchr = { version = "2.7.4", default-features = false }
anyhow = "1.0.88"
zstd = { version = "0.13.2" }
tar = { version = "0.4.41", default-features = false }
itertools = "0.13.0"
flate2 = "1.0.33"
byte-unit = { version = "5.1.4" }
sha2 = { version = "0.10.8" }
oci-spec = { version = "0.6.8", default-features = false, features = ["image"] }
serde_json = { version = "1.0.128", default-features = false }
const-hex = { version = "1.12.0", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
serde = "1.0.209"
rayon = "1.10.0"
indicatif = "0.17.8"
oci-client = "0.12.1"
tokio = { version = "1.40.0", features = ["full"] }
docker_credential = "1.3.1"
tokio-util = { version = "0.7.12", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
shadow-rs = "0.34.0"
rand = {version = "0.8.5", default-features = false, features = ["small_rng", "getrandom", "min_const_gen"]}
globset = { version = "0.4.15", default-features = false }

[features]
default = ["perf", "zstd-experimental"]
perf = ["tracing/release_max_level_info", "flate2/zlib-ng", "zstd/arrays"]
zstd-experimental = ["zstd/experimental"]

[target.'cfg(all(unix, any(target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64")))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }


[profile.lto]
inherits = "release"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.flamegraph]
inherits = "lto"
debug = true

[dev-dependencies]
test-log = { version = "0.2.16", features = ["color", "trace"] }

[build-dependencies]
shadow-rs = "0.34.0"
