[package]
name = "docker-repack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byte-unit = "5.1.4"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
const-hex = "1.12.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
indicatif = { version = "0.17.8" }
itertools = "0.13.0"
noisy_float = "0.2.0"
oci-spec = { version = "0.6.7", default-features = false, features = ["image"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
tar = { version = "0.4.41", default-features = false }
thiserror = "1.0.62"
trie-rs = "0.4.2"
zstd = "0.13.2"
strum_macros = "0.26.4"
globset = { version = "0.4.14", features = ["serde"] }
